# ai_ship_robot

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  kilo.md  warning.txt
.devcontainer/: Dockerfile  devcontainer.json
aitran/ros2_ws/src/ai_ship_robot_slam/: CMakeLists.txt  package.xml
aitran/ros2_ws/src/ai_ship_robot_slam/config/: lio_sam_mid360.yaml  multi_lidar_fusion.yaml
aitran/ros2_ws/src/ai_ship_robot_slam/config/glim_real/: config_sensors.json  config_viewer.json
aitran/ros2_ws/src/ai_ship_robot_slam/config/glim_sim/: config_preprocess.json  config_ros.json
aitran/ros2_ws/src/ai_ship_robot_slam/launch/: glim.launch.py  lio_sam.launch.py
aitran/ros2_ws/src/ai_ship_robot_slam/rviz/: glim_slam.rviz  lio_sam.rviz
aitran/ros2_ws/src/ai_ship_robot_slam/src/: multi_lidar_pointcloud_fusion_node.cpp  six_axis_imu_initial_orientation_node.cpp
aitran/scripts/app/: run_glim_slam.sh  run_lio_sam.sh  run_slam.sh
aitran/scripts/install/: install.sh  install_third_party.sh  patch_lio_sam_mid360_6axis.py  setup.sh
dev/: create_production_bundle.sh  open_pcd_viewer.sh  replay_rosbag.sh  view_elevation_map.sh
dev/agent_tools/: README.md  evaluate_lio_sam_bag.py
docs/: lio_sam_patch_summary.md
install/: install.sh  install_third_party.sh  setup.sh  shell_environment.sh
install/third_party_overrides/lio_sam_mid360_ros2/: README.md
plan/: fast_lio2_upstream_import.md  lio_sam_mid360_imu_initial_orientation.md  mid360_sim_adapter_topics.md  pcd_map_saver.md  record-bag-all-topics-plan.md  rosbag_prefix_and_replay_plan.md  run_simulation_drive_scenario.md  run_simulation_record_after_ready_plan.md  third_party_system_underlay.md
ros2_ws/src/ai_ship_robot_description/: package.xml
ros2_ws/src/ai_ship_robot_fast_lio2/: UPSTREAM.md
ros2_ws/src/ai_ship_robot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/ai_ship_robot_gazebo/config/: mid360_points.rviz
ros2_ws/src/ai_ship_robot_gazebo/launch/: simulation.launch.py
ros2_ws/src/ai_ship_robot_gazebo/worlds/: lidar_placement.world
ros2_ws/src/ai_ship_robot_slam/: CMakeLists.txt  package.xml
ros2_ws/src/ai_ship_robot_slam/config/: dual_lidar_fusion.yaml  lio_sam_mid360.yaml  lio_sam_mid360_sim.yaml  multi_lidar_fusion.yaml  pcd_localization.yaml
ros2_ws/src/ai_ship_robot_slam/config/glim_real/: config_ros.json
ros2_ws/src/ai_ship_robot_slam/config/glim_sim/: config_odometry_cpu.json  config_ros.json  config_sensors.json
ros2_ws/src/ai_ship_robot_slam/include/ai_ship_robot_slam/: map_saver_utils.hpp
ros2_ws/src/ai_ship_robot_slam/launch/: glim.launch.py  lio_sam.launch.py  lio_sam_localization.launch.py  sim_glim.launch.py
ros2_ws/src/ai_ship_robot_slam/rviz/: glim_slam.rviz  lio_sam.rviz
ros2_ws/src/ai_ship_robot_slam/src/: dual_lidar_pointcloud_fusion_node.cpp  elevation_map_marker_viewer_node.cpp  ground_candidate_map_generator.cpp  livox_custommsg_self_filter_node.cpp  livox_custommsg_to_pointcloud2_node.cpp  map_saver_node.cpp  map_saver_utils.cpp  mid360_lio_sam_pointcloud_adapter_node.cpp  multi_lidar_pointcloud_fusion_node.cpp  pcd_height_diff_map_generator.cpp  pcd_localization_node.cpp  pcd_map_saver_node.cpp  slam_reference_lidar_static_tf_node.cpp
ros2_ws/src/ai_ship_robot_slam/test/: map_saver_utils_test.cpp
ros2_ws_sim/src/ai_ship_robot_gazebo/: package.xml
scripts/: bootstrap_workspace.sh  drive_robot.sh  install_environment.sh  run_lio_sam.sh  run_simulation.sh  run_slam.sh  save_maps.sh  save_pcd_map.sh  setup_workspace.sh
scripts/app/: drive_robot.sh  run_glim_slam.sh  run_simulation.sh
scripts/app/sim/: drive_robot.sh  run_glim_slam.sh  run_simulation.sh
scripts/dev/: replay_rosbag.sh
scripts/install/: environment.sh  install.sh  install_third_party.sh  setup.sh  shell_environment.sh  system_dependencies.sh
scripts/install/sim/: install.sh  install_third_party.sh  setup.sh
sim/: README.md
sim/config/drive_scenarios/: README.md  arc_left.yaml  around_hill_world.yaml  around_world.yaml  forward_backward.yaml  vortex.yaml  yaw_left.yaml  yaw_right.yaml
sim/install/: install.sh  install_third_party.sh  setup.sh
sim/ros2_ws/src/ai_ship_robot_description/: CMakeLists.txt  model.config  model.sdf
sim/ros2_ws/src/ai_ship_robot_description/urdf/: ai_ship_robot.urdf.xacro
sim/ros2_ws/src/ai_ship_robot_description/urdf/lidar/models/: mid360_lidar.urdf.xacro
sim/ros2_ws/src/ai_ship_robot_description/urdf/lidar/patterns/: lidar_pattern_dual_front_center_arm_top.urdf.xacro  lidar_pattern_dual_front_updown.urdf.xacro  lidar_pattern_dual_opposit.urdf.xacro  lidar_pattern_dual_out38.urdf.xacro  lidar_pattern_dual_updown.urdf.xacro  lidar_pattern_quad_front_right_rear_left_updown.urdf.xacro
sim/ros2_ws/src/ai_ship_robot_gazebo/: CMakeLists.txt  package.xml
sim/ros2_ws/src/ai_ship_robot_gazebo/config/: gazebo_ros.yaml  mid360_points.rviz  slope_drive_controller.yaml
sim/ros2_ws/src/ai_ship_robot_gazebo/include/ai_ship_robot_gazebo/: cmd_vel_slope_adapter.hpp  drive_limits.hpp  scripted_drive_core.hpp
sim/ros2_ws/src/ai_ship_robot_gazebo/launch/: sim_glim.launch.py  sim_lio_sam.launch.py  simulation.launch.py
sim/ros2_ws/src/ai_ship_robot_gazebo/scripts/: keyboard_drive.py  mid360_sim_adapter.py  scripted_drive.py
sim/ros2_ws/src/ai_ship_robot_gazebo/src/: cmd_vel_slope_adapter.cpp  keyboard_drive.cpp  mid360_sim_adapter.cpp  scripted_drive.cpp  scripted_drive_core.cpp  slope_drive_bridge.cpp
sim/ros2_ws/src/ai_ship_robot_gazebo/test/: test_cmd_vel_slope_adapter.cpp  test_scripted_drive.cpp  test_scripted_drive.py
sim/ros2_ws/src/ai_ship_robot_gazebo/worlds/: hill_placement.world  lidar_placement.world  shipyard_indoor_100x50.world  shipyard_indoor_100x50_light.world
sim/scripts/: drive_robot.sh  run_simulation.sh
sim/scripts/app/: drive_robot.sh  run_simulation.sh
sim/scripts/install/: install.sh  install_third_party.sh  setup.sh
tmp_remote/ai_ship_robot/: .dockerignore  .gitignore  AGENTS.md  README.md
tmp_remote/ai_ship_robot/.devcontainer/: initializeCommand.sh
tmp_remote/ai_ship_robot/dev/: replay_rosbag.sh
(+53 files in other folders)
